--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     howdy,
     <p>I am ember of flame this is my site</p>
-
+ <p>soon i will do diy totorials and  blog on projects i am working on these will include </p> <p>Rfid</p> <p>hardwhere hacking</p> <p>Biohacking</p> <p>as well as my jorney in IT</p>
 </body>
 </html>
